---------------------------------------------------------------------------------------------------
Version: 1.3.4
Date: 2022-01-?
  Changes:
      - Balance. 240% emissions multiplier for bio residue.
---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: 2022-01-25
  Changes:
      - Loading fresh game save crash issue fix (occasionally added with old gamesaves support).
      - Residue bio processing recipe balance fix.
      - Electric burner energy consumption reduced.
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2022-01-24
  Changes:
      - Reduced burner creep miner energy consumption by 20% to make 1 residue item energy enough for one remove creep iteration.
      - Burner creep miner will gather all collected residue (if any!) in current iteration into its fuel slots when no fuel is left and nowhere to take.
      - Fixed issue: Burner creep miner searched for fuel too often when it is already out of energy. Now will do it only once per 20 seconds.
      - Balance. Halved pollution created by creep excavation. Slightly increased burner creep miner building recipe cost.
      - Old gamesaves support added. For games started with Warmonger prior to 1.2.4 and especially older than 1.2.2 a new game (new map generation) is recommended to fix creep balance.
      - Minor fixes.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2022-01-21
  Changes:
      - Bio residue (bio-remains) item introduced. Has 30% chance to be gathered from biter creep type-2. Has fuel value of 1MJ and high emissions rate.
      Later can be bio-processed into sulphuric acid in complex recipe (Bio-lab is required) - can incorporate it into recipes of other mods if needed.
      - Creep miner buildings were completely re-designed. Removed all complex entities.